--- a/PRACTICE.css
+++ b/PRACTICE.css
@@ -1,7 +1,7 @@
-body{
-    align-items: center;
-    align-content: center;
+*{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+body{
     font-size: 25;
 }
 div{
@@ -13,13 +13,13 @@ div{
     justify-self: center;
     text-align: center;
     border: 4px solid black;
-    border-radius: 2%;
+    border-radius: 45px;
     align-content: center;
 }
 
 #container{
-    width: 50%;
-    margin-left: 25%;
+    width: 55%;
+    margin-left: 20%;
     height: fit-content;
     display: flex;
     flex-direction: column;
@@ -36,24 +36,23 @@ div{
 
 select{
     height: 50px;
-    width: 500px;
+    width: 80%;
     border: 3px solid brown;
-    border-radius: 2%;
+    border-radius: 45px;
     text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 20;
 }
 
 button{
-    height: fit-content;
-    width: fit-content;
+    height: 50px;
+    width: 130px;
     margin: 5px;
     padding: 10px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 20;
     background-color: red;
     color: whitesmoke;
-    border-radius: 8%;
+    border: 2px solid black;
+    border-radius: 30px;
 }
 
 span{
